syntax = "proto3";

message ProtoPoint {
  double latitude = 1;
  double longitude = 2;
}