syntax = "proto3";
import 'proto_stop.proto';

message ProtoStops {
  repeated ProtoStop stops = 1;
  map<int64, int64> indexes_by_id = 2;
}